# game

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Game  build.ninja  build.sh  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: IMG.c.422F157552A55629.idx  IMG_WIC.c.FA3EA490CB0B2DC6.idx  IMG_avif.c.7772B5AF00103881.idx  IMG_bmp.c.B2BA40160B8B80E5.idx  IMG_gif.c.DB818CC43ED8B3BB.idx  IMG_jpg.c.88FDE44701E179E9.idx  IMG_jxl.c.9775C8F095EC6ED4.idx  IMG_lbm.c.2605957902E0919A.idx  IMG_pcx.c.14B032EED9237CFA.idx  IMG_png.c.42D52FBD1A532E11.idx  IMG_pnm.c.E1F3EDA6E5A7E983.idx  IMG_qoi.c.059D9E38A9702CB6.idx  IMG_stb.c.E7EFFE042B0FF021.idx  IMG_svg.c.9E3F313E06E1367D.idx  IMG_tga.c.4A77C144E471A7F3.idx  IMG_tif.c.C0A7150CA93C6693.idx  IMG_webp.c.A07FA0065862C9D2.idx  IMG_xcf.c.939DDD637A7212FC.idx  IMG_xpm.c.A1914FC534ECC46D.idx  IMG_xv.c.877D79E9F9F1A6AA.idx  SDL.c.BFE87172B003F3CE.idx  SDL.h.3BBA4188F02C21E0.idx  SDL_RLEaccel.c.CE9739E34224908A.idx  SDL_RLEaccel_c.h.8B769247F38DA750.idx  SDL_alsa_audio.c.41D86F524C11F2DE.idx  SDL_alsa_audio.h.8FC17BB9F636D745.idx  SDL_appid.c.C8626EBA97BCE09C.idx  SDL_appid.h.EE5CE5DBE4EEC54A.idx  SDL_assert.c.B3CFAEA22E3ED1CA.idx  SDL_assert.h.992FA5CD2EB80941.idx  SDL_assert_c.h.C30B17B6A84DDE1A.idx  SDL_asyncio.c.C81B25A664B5243D.idx  SDL_asyncio.h.E75EB0A1310C4E39.idx  SDL_asyncio_c.h.962716E7972CE487.idx  SDL_asyncio_generic.c.085FE0DB1DEA26E6.idx  SDL_asyncio_liburing.c.2E2F1AF00DED9CBF.idx  (+646 more)
include/: core.h
src/: core.cpp  core.h  main.cpp  texture.cpp  texture.h
